WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30454
After running a transition with an end event listener, can't change the transform
https://bugs.webkit.org/show_bug.cgi?id=30454
Summary
After running a transition with an end event listener, can't change the trans...
Simon Fraser (smfr)
Reported
2009-10-16 13:36:56 PDT
There's a bug where, if you have a webkitTransitionEnd event listener on the page, and you run a transition on -webkit-transform, subsequent attempts to set the transform fail. The problem is that the animation isn't getting cleaned up off the GraphicsLayer, and so the transform change doesn't show up.
Attachments
Patch
(15.63 KB, patch)
2009-10-16 16:22 PDT
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-10-16 16:22:58 PDT
Created
attachment 41339
[details]
Patch
Simon Fraser (smfr)
Comment 2
2009-10-16 17:05:23 PDT
Comment on
attachment 41339
[details]
Patch r=mitz on irc
Simon Fraser (smfr)
Comment 3
2009-10-16 17:22:58 PDT
http://trac.webkit.org/changeset/49711
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug